<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical"
  	android:padding="6dip">
  	
  	<TextView
		android:text="@string/T11_menu_drop_label"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:gravity="center_horizontal"
	  	android:layout_marginTop="6dip"
	  	android:layout_marginBottom="6dip"
	  	android:textSize="20sp"
	  	android:textColor="@android:color/white"
  		android:singleLine="true"
  		android:ellipsize="none"/>
  		
  	<RelativeLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="10dip">
  		
  		<TextView
	  	  	android:id="@+id/note"
	  	  	android:text="@string/note_label"
	  	  	android:layout_width="wrap_content"
	  	  	android:layout_height="wrap_content"
	  	  	android:layout_marginRight="3dip"
	  	  	android:textSize="14sp"
	  	  	android:textColor="@android:color/white"/>
		  <TextView
		  	android:text="@string/T11_location_info"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:layout_toRightOf="@id/note"
		  	android:layout_alignTop="@id/note"
		  	android:paddingTop="2dip"
		  	android:textSize="12sp"
		  	android:textColor="@android:color/white"/>
  		
  	</RelativeLayout>
  	
  	<EditText
  		android:id="@+id/T11_drop_line_description"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="5dip"
  		android:hint="@string/T11_drop_line_desc_hint"
  		android:maxLength="100"/>
  	
  	<EditText
  		android:id="@+id/T11_drop_description"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="10dip"
  		android:hint="@string/T11_drop_description_hint"
  		android:maxLength="300"/>
  		
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/T11_validation_time"/>
  	
  	<RelativeLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="4dip">
  		<EditText
  			android:id="@+id/T11_validation_time_string"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:enabled="false"
  			android:text="@string/T11_time_undefined"
  			android:textColor="@android:color/primary_text_dark_nodisable"
  			android:textSize="16sp"
  			android:textStyle="italic"/>
  		<Button
  			android:id="@+id/T11_set_time"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_toRightOf="@id/T11_validation_time_string"
  			android:layout_marginLeft="4dip"
  			android:text="Modifica"/>
  	</RelativeLayout>
  	
  	<TextView
  		android:id="@+id/T11_current_time"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="10dip"/>
  		
  	<Button
  		android:id="@+id/T11_submit"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="6dip"
  		android:text="@string/T11_submit_label"/>
  	
  </LinearLayout>
  
</ScrollView>
