<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="30dip"
  android:orientation="horizontal">
  
  <LinearLayout
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center">
  	<TextView
  		android:text="@string/choose_location_label"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_gravity="center"
  		android:layout_marginBottom="25dip"
  		android:textSize="18sp" />
  	<Button
  		android:id="@+id/renfe_button"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="10dip"
  		android:text="@string/renfe_label" />
  		
  	<Button
  		android:id="@+id/fgc_button"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="10dip"
  		android:text="@string/fgc_label" />
  		
  	<Button
  		android:id="@+id/metro_button"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/metro_label" />
  </LinearLayout>
  
</ScrollView>