<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal"
  android:padding="6dip">
  <TextView
  	android:id="@+id/confirmation_dialog_title"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_marginBottom="6dip"
  	android:text="@string/confirmation_dialog_label"/>
  <EditText
	android:id="@+id/confirmation_description"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_below="@id/confirmation_dialog_title"
	android:layout_marginBottom="6dip"
	android:maxLength="100"/>
	
	<Button
  		android:id="@+id/confirmation_submit_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/confirmation_description"
  		android:text="@string/submit_label"/>
  	<Button
  		android:id="@+id/confirmation_cancel_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignTop="@id/confirmation_submit_button"
  		android:layout_alignBottom="@id/confirmation_submit_button"
  		android:layout_toRightOf="@id/confirmation_submit_button"
  		android:text="@string/cancel_label"/>
</RelativeLayout>
