<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal"
  android:padding="6dip">
  
  <TextView
  	android:id="@+id/email"
	android:textAppearance="?android:attr/textAppearanceSmall"
    android:textStyle="bold"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/register_email_label"/>
  <EditText
    android:id="@+id/email_register_edit"
    android:singleLine="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/email"
    android:minWidth="250dip"
    android:scrollHorizontally="true"
    android:capitalize="none"
    android:autoText="false"
    android:inputType="textEmailAddress"/>
	    
  <TextView
  	android:id="@+id/passwd"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:textStyle="bold"
    android:singleLine="true"
    android:layout_marginTop="2dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/email_register_edit"
    android:text="@string/register_passwd_label"/>
  <EditText
    android:id="@+id/password_register_edit"
    android:singleLine="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/passwd"
    android:minWidth="250dip"
    android:scrollHorizontally="true"
    android:capitalize="none"
    android:autoText="false"
    android:password="true"
    android:inputType="textPassword"/>
    
  <TextView
  	android:id="@+id/confirm_passwd"
  	android:textAppearance="?android:attr/textAppearanceSmall"
  	android:textStyle="bold"
  	android:singleLine="true"
  	android:layout_marginTop="2dip"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_below="@id/password_register_edit"
  	android:text="@string/confirm_passwd_label"/>
  <EditText
  	android:id="@+id/confirm_passwd_edit"
  	android:singleLine="true"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_below="@id/confirm_passwd"
  	android:layout_marginBottom="4dip"
  	android:minWidth="250dip"
  	android:scrollHorizontally="true"
  	android:capitalize="none"
  	android:autoText="false"
  	android:password="true"
  	android:inputType="textPassword"/>
    
  <RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_below="@id/confirm_passwd_edit">
  	<Button
  		android:id="@+id/register_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/register_preference"/>
  	<Button
  		android:id="@+id/cancel_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_toRightOf="@id/register_button"
  		android:layout_alignTop="@id/register_button"
  		android:text="@string/cancel_label"/>
  </RelativeLayout>
</RelativeLayout>
