<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="horizontal"
  	android:padding="6dip">
  	<ImageView
  		android:id="@+id/detail_line_icon"
  		android:layout_width="wrap_content"
  		android:layout_height="fill_parent"
  		android:adjustViewBounds="true"
  		android:layout_marginLeft="6dip"
  		android:layout_marginTop="6dip"/>
  		
  	<TextView
  		android:id="@+id/detail_station_name"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/detail_line_icon"
  		android:layout_marginTop="12dip"
  		android:layout_centerHorizontal="true"
  		android:gravity="center"
  		android:textSize="20sp"
  		android:textColor="@android:color/white"
  		android:singleLine="true"
  		android:ellipsize="none"/>
  		
  	<View
  		android:id="@+id/hor_line_1"
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:layout_below="@id/detail_station_name"
  		android:background="?android:attr/listDivider"/>
  		
  	<TextView
  		android:id="@+id/detail_line_direction"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/hor_line_1"
  		android:layout_marginTop="4dip"/>
  	<TextView
  		android:id="@+id/detail_incident_cause"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/detail_line_direction"
  		android:layout_marginTop="4dip"/>
  	<TextView
  		android:id="@+id/detail_incident_time"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/detail_incident_cause"
  		android:layout_marginTop="4dip"/>
  	<TextView
  		android:id="@+id/detail_incident_duration"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/detail_incident_time"
  		android:layout_marginTop="4dip"/>
  	<TextView
  		android:id="@+id/detail_incident_status"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/detail_incident_duration"
  		android:layout_marginTop="4dip"
  		android:layout_marginBottom="4dip"/>
  		
  	<View
  		android:id="@+id/hor_line_2"
  		android:layout_width="fill_parent"
  		android:layout_height="2dip"
  		android:layout_below="@id/detail_incident_status"
  		android:background="?android:attr/listDivider"/>
  		
  	<TextView
  		android:id="@+id/detail_incident_comment"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/hor_line_2"
  		android:layout_marginTop="2dip"
  		android:layout_marginBottom="4dip"
  		android:textStyle="italic"
  		android:gravity="center_horizontal"/>
  		
  	<Button
  		android:id="@+id/detail_comments_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:minWidth="150dip"
  		android:layout_below="@id/detail_incident_comment"
  		android:layout_marginTop="10dip"
  		android:layout_centerHorizontal="true"
  		android:gravity="center"
  		android:text="@string/detail_comments_label"/>
  	<Button
  		android:id="@+id/detail_confirmation_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:minWidth="150dip"
  		android:layout_below="@id/detail_comments_button"
  		android:layout_marginTop="10dip"
  		android:layout_centerHorizontal="true"
  		android:gravity="center"
  		android:text="@string/detail_confirmation_label"/>
  	<Button
  		android:id="@+id/detail_map_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:minWidth="150dip"
  		android:layout_below="@id/detail_confirmation_button"
  		android:layout_marginTop="10dip"
  		android:layout_centerHorizontal="true"
  		android:gravity="center"
  		android:text="@string/detail_map_label"/>
  		
  </RelativeLayout>
</ScrollView>
